# knowledge-proof-app

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: challenges.py  config.py  db.py  github_sync.py  llm.py  main.py  pdf_ingest.py  progress.py  scheduler.py
cli/: main.py
frontend/: README.md  pubspec.yaml
frontend/lib/: api.dart  main.dart
frontend/lib/pages/: challenge_page.dart  home_page.dart  settings_page.dart
frontend/lib/widgets/: heatmap.dart  progress_ticker.dart  rich_content.dart
frontend/web/: index.html  manifest.json
supabase/: schema.sql
