[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-dive-tracker"
version = "0.1.0"
description = "Deep Dive Tracker — personal spaced-repetition learning app (CLI + FastAPI backend)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "psutil>=5.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "supabase>=2.4",
    "httpx>=0.27",
    "anthropic>=0.116",
    "openai>=1.40",
    "google-genai>=1.0",
    "pypdf>=4.2",
]

[project.scripts]
knowledge = "cli.main:app"

[tool.setuptools]
packages = ["cli", "backend"]
